# riverdelta

./: .eslintrc.cjs  .gitignore  .prettierignore  README.md  a.mod.nil  flake.nix  opt.wat  package-lock.json  package.json  shell.nix  std.nil  test.nil  tsconfig.json
doc/: lang.md
src/: ast.ts  codegen.test.ts  codegen.ts  context.ts  error.test.ts  error.ts  index.ts  lexer.test.ts  lexer.ts  loader.ts  lower.test.ts  lower.ts  options.ts  parser.ts  printer.ts  resolve.ts  typeck.test.ts  typeck.ts  types.ts  utils.ts  wasm.ts
src/__snapshots__/: lexer.test.ts.snap
src/typeck/: base.ts  expr.ts  index.ts  infer.test.ts  infer.ts  item.ts  lint.ts
src/wasm/: defs.ts  wat.test.ts  wat.ts
std/: io.nil  list.nil  rt.nil  std.mod.nil
std/rt/: alloc.nil  rt.mod.nil
tests/: Cargo.toml
tests/src/: main.rs
tests/ui/: function_calls_ok.nil  hello_world.nil  type_assignments.nil
ui-harness/: Cargo.toml
ui-harness/src/: main.rs
ui-tests/: Cargo.toml  basic_recovery.nil  basic_recovery.stderr  mismatched_parens.stderr  raw_ptr.nil  type_alias.nil  type_assignments.nil
ui-tests/asm/: drop.nil  instr_not_string.nil  instr_not_string.stderr  invalid_instr.nil  invalid_instr.stderr  missing_locals.nil  missing_locals.stderr  not_toplevel.nil  not_toplevel.stderr  wrong_imm.nil  wrong_imm.stderr
ui-tests/functions/: bodies.nil  body_mismatched_parens.nil  body_mismatched_parens.stderr  function_calls_ok.nil  missing_args.nil  missing_args.stderr
vscode/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
(+22 files in other folders)
