[package]
name = "ui-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = "0.18.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
ui_test = "0.23.0"
